--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -17,7 +17,7 @@ jobs:
     
       # Step 2: Set up Python environment and install dependencies
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
           python-version: '3.10'
     
@@ -35,7 +35,7 @@ jobs:
           coverage xml -o coverage.xml
     
       - name: Upload coverage report
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: coverage.xml
@@ -52,14 +52,14 @@ jobs:
     
       # Step 5: Deploy to Google Cloud (example with GKE)
       - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0
+        uses: google-github-actions/setup-gcloud@latest
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
           export_default_credentials: true
     
       - name: Get GKE credentials
-        run: gcloud container clusters get-credentials my-cluster --zone us-east1-a
+        run: gcloud container clusters get-credentials my-cluster --zone us-central1-a
     
       - name: Deploy to GKE
         run: kubectl set image deployment/my-app my-app=gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:${{ github.sha }}
