--- a/.github/workflows/syncgcp.yaml
+++ b/.github/workflows/syncgcp.yaml
@@ -26,19 +26,19 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y google-cloud-cli
 
-      # Step 4: Decode and Write GCP Service Account Key to File
+      # Step 4
       - name: Decode and Write GCP Service Account Key
         run: |
           echo "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}" | base64 -d > /tmp/gcp-key.json
         shell: bash
 
-      # Step 5: Authenticate with GCP using the Temporary File
+      # Step 5: Authenticate using the Temporary File
       - name: Authenticate with GCP
         env:
           GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-key.json
         run: gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS}
 
-      # Step 6: Set GCP Project ID
+      # Step 6
       - name: Set GCP Project ID
         run: gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
 
@@ -50,17 +50,17 @@ jobs:
           gsutil -m cp -r artifacts/* gs://${GCS_BUCKET_NAME}/artifacts/
           gsutil -m cp -r pipeline/airflow/dags/* gs://${GCS_BUCKET_NAME}/airflow-dags/
 
-      # Step 8: Remove Broken Symbolic Links
+      # Step 8
       - name: Remove Broken Symbolic Links
         run: |
           find . -xtype l -delete
 
-      # Step 9: Upload All Files to GCP Bucket with Directory Structure
+      # Step 9: Bucket with Directory Structure
       - name: Upload All Files to GCP Bucket
         env:
           GCS_BUCKET_NAME: ${{ secrets.GCS_BUCKET_NAME }}
         run: |
-          gsutil -m rsync -r . gs://${GCS_BUCKET_NAME}/
+          gsutil -m rsync -r . gs://${GCS_BUCKET_NAME}/GitHub/
 
       # Step 10: Verify Upload
       - name: Verify GCP Bucket Upload
