--- a/.github/workflows/model.yml
+++ b/.github/workflows/model.yml
@@ -3,13 +3,14 @@ name: Train ML Model
 on:
   push:
     branches:
+      - main
       - citest
 
 jobs:
   setup-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    # Step 1: Checkout code
+    # Step 1
     - name: Checkout code
       uses: actions/checkout@v2
 
@@ -26,6 +27,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.10'
+        
     # Step 4: Create `trainer` package
     - name: Create Trainer Package
       run: |
@@ -95,18 +97,5 @@ jobs:
       run: |
           echo "Model Training on Vertex AI is starting..."
           echo "Preparing to notify about model training completion."
-          console.log("Starting notification process...");
-          const message = "Model training has been completed on Vertex AI! The trained model is now available for use.";
-          
-          # if (context.issue && context.issue.number) {
-          #   github.issues.createComment({
-          #     owner: context.repo.owner,
-          #     repo: context.repo.repo,
-          #     issue_number: context.issue.number,
-          #     body: 'Model training has been completed successfully!'
-          #   });
-          # } else {
-          #   console.log("No issue context available. Model training success");
-          # }
 
 
