--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -1,65 +1,44 @@
-name: Python Test and Deployment Workflow
+name: GCP CI/CD Workflow
+#runs-on: ubuntu-22.04
+steps:
+  # Step 1: Run syncgcp.yaml
+  - name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        echo "Running syncgcp.yaml..."
+        gcloud builds submit --config=syncgcp.yaml
 
-on:
-  push:
-    branches:
-      - main
-      - citest
+  # Step 2: Run pytest.yaml
+  - name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        echo "Running pytest.yaml..."
+        gcloud builds submit --config=PyTest.yaml
 
-jobs:
-  build_and_test:
-    runs-on: ubuntu-latest
+  # Step 3: Run airflowtrigger.yaml
+  - name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        echo "Running airflowtrigger.yaml..."
+        gcloud builds submit --config=airflowtrigger.yaml
 
-    steps:
-      # Step 1: Checkout the repository
-      - name: Checkout repository
-        uses: actions/checkout@v2
-    
-      # Step 2: Set up Python environment and install dependencies
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.10'
-    
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-    
-      # Step 3: Run tests and handle test artifacts
-      - name: Run tests with coverage
-        run: |
-          pip install coverage
-          coverage run -m pytest
-          coverage report
-          coverage xml -o coverage.xml
-    
-      - name: Upload coverage report
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: coverage.xml
-    
-      # Step 4: Build and push Docker images
-      - name: Build Docker image
-        run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:${{ github.sha }} .
-    
-      - name: Log in to Google Container Registry
-        run: echo ${{ secrets.GCR_JSON_KEY }} | docker login -u _json_key --password-stdin https://gcr.io
-    
-      - name: Push Docker image
-        run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:${{ github.sha }}
-    
-      # Step 5: Deploy to Google Cloud 
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0.2.0
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-          export_default_credentials: true
-    
-      - name: Get GKE credentials
-        run: gcloud container clusters get-credentials my-cluster --zone us-central1-a
-    
-      - name: Deploy to GKE
-        run: kubectl set image deployment/my-app my-app=gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:${{ github.sha }}
+  # Step 4: Run model.yaml
+  - name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        echo "Running model.yaml..."
+        gcloud builds submit --config=model.yaml
+
+# Trigger by GitHub Push
+trigger:
+  event:
+    type: PUSH
+    branch: 'main' 
