--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -44,7 +44,7 @@ jobs:
             --display-name=mlops-group10-deploy \
             --machine-type=n1-standard-4
 
-          echo "Model deployed successfully to endpoint $ENDPOINT_ID!
+          echo "Model deployed successfully to endpoint $ENDPOINT_ID!"
           
     # Step 4: Monitor Deployment Status
     - name: Monitor Deployment Status
