--- a/.github/workflows/airflow2.yaml
+++ b/.github/workflows/airflow2.yaml
@@ -70,7 +70,7 @@ jobs:
       - name: Wait for Airflow to Initialize
         working-directory: ./pipeline/airflow
         run: |
-          timeout 300 bash -c 'until docker-compose exec -T airflow-webserver curl -f http://localhost:8080/health; do sleep 10; done'
+          timeout 300 bash -c 'until docker-compose exec airflow-webserver curl -f http://0.0.0.0:8080/health; do sleep 10; done' # 300 bash -c 'until docker-compose exec -T airflow-webserver curl -f http://localhost:8080/health; do sleep 10; done'
   
       # Step 9: Delete .pyc Files
       - name: Delete .pyc Files
