--- a/.github/workflows/airflowtrigeer.yaml
+++ b/.github/workflows/airflowtrigeer.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   trigger_airflow_dag:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout repository
