--- a/.github/workflows/syncgcp.yaml
+++ b/.github/workflows/syncgcp.yaml
@@ -29,7 +29,7 @@ jobs:
       # Step 4
       - name: Decode and Write GCP Service Account Key
         run: |
-          echo "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}" | base64 -d > /tmp/gcp-key.json
+          echo "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}" > /tmp/gcp-key.json
         shell: bash
 
       # Step 5: Authenticate using the Temporary File
