--- a/.github/workflows/airflow2.yaml
+++ b/.github/workflows/airflow2.yaml
@@ -75,7 +75,8 @@ jobs:
       - name: Wait for Airflow to Initialize
         working-directory: ./pipeline/airflow
         run: |
-          timeout 300 bash -c 'until [ "$(docker-compose ps -q airflow-webserver | xargs docker inspect -f '{{ .State.Health.Status }}')" == "healthy" ]; do sleep 10; done'
+          timeout 300 bash -c 'until docker-compose exec -T airflow-webserver curl -f http://0.0.0.0:8080/health; do sleep 10; done'
+          # timeout 300 bash -c 'until [ "$(docker-compose ps -q airflow-webserver | xargs docker inspect -f '{{ .State.Health.Status }}')" == "healthy" ]; do sleep 10; done'
           # timeout 300 bash -c 'until docker-compose exec -T airflow-webserver curl -f http://localhost:8080/; do sleep 10; done'
           # timeout 600 bash -c 'until docker-compose exec -T airflow-webserver curl -f http://localhost:8080/health; do sleep 20; done'
       # Step 9: Delete .pyc Files
